--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://blog.jiangong.cc" target="_blant">博客</a>
+                    <a class="nav-link" href="https://www.jiangong.cc" target="_blant">博客</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.jiaohuile.com" target="_blant">建工网盘</a>
@@ -436,7 +436,7 @@
         </ul>
     </div>
     <!--版权信息开始-->
-    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://www.jiangong.cc/">建工驿站</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a> | Powered by JIANGONG! X1.0</p>
+    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://www.jiangong.cc/">建工驿站</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
 
     <!--版权信息结束-->
     <script>
