--- a/index.html
+++ b/index.html
@@ -24,17 +24,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://at.alicdn.com/t/font_1230786_ewprpwrczvj.js"></script>
     <script src="sou.js"></script>
-	<!--百度统计开始-->
-	<script>
-	var _hmt = _hmt || [];
-	(function() {
-	  var hm = document.createElement("script");
-	  hm.src = "https://hm.baidu.com/hm.js?3bb05e92597ded551291d4abbe26cfce";
-	  var s = document.getElementsByTagName("script")[0]; 
-	  s.parentNode.insertBefore(hm, s);
-	})();
-	</script>
-	 <!--百度统计结束-->
     <link rel='stylesheet' href='style.css'>
 </head>
 
@@ -448,7 +437,9 @@
     </div>
     <!--版权信息开始-->
     <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://www.jiangong.cc/">建工驿站</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
-
+<!--统计开始--><center>
+	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279715225'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279715225%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+	 </center><!--统计结束-->
     <!--版权信息结束-->
     <script>
     eval(function(e, t, a, c, i, n) {
