--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>华图 - 愿祖国繁荣富强</title>
+    <title>华图 - 愿祖国繁荣富强 - 中国地图</title>
+	<meta content="资讯,新闻,财经,房产,视频,NBA,科技,中国地图,ChinaMap,地图,中国" name="Keywords">
+	<meta name="description" content="愿祖国繁荣富强。" />
     <link rel="apple-touch-icon-precomposed" href="280.png" />
     <meta name="msapplication-TileImage" content="280.png" />
     <link rel="shortcut icon" href="https://ailore-1251230017.cos.ap-guangzhou.myqcloud.com/%E5%9B%BE%E5%BA%93/favicon.ico" />
@@ -94,6 +96,9 @@
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link" href="https://www.jiaohuile.com/#/1/main/%E8%BB%9F%E4%BB%B6" target="_blant">软件下载</a>
+				</li>
+				<li class="nav-item">
+				    <a class="nav-link" href="http://bzdt.ch.mnr.gov.cn/" target="_blant">中国地图</a>
 				</li>
 				
             </ul>
