--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://www.jiangong.cc" target="_blant">博客</a>
+                    <a class="nav-link" href="https://www.jiangong.cc" target="_blant">聚合搜索</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.jiaohuile.com" target="_blant">建工网盘</a>
