--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a class="nav-link" href="https://www.jiangong.cc" target="_blant">聚合搜索</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.jiaohuile.com" target="_blant">建工网盘</a>
+                    <a class="nav-link" href="https://pan.chinamap.org" target="_blant">华图网盘</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://mail.jiangong.cc/" target="_blant">企业邮箱</a>
