--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 				<li class="nav-item">
 				    <a class="nav-link" href="http://bzdt.ch.mnr.gov.cn/" target="_blant">中国地图</a>
 				</li>
+				<li class="nav-item">
+				    <a class="nav-link" href="http://adout.chinamap.org/" target="_blant">关于我们</a>
+				</li>
 				
             </ul>
             <style>
