--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         </ul>
     </div>
     <!--版权信息开始-->
-    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://www.jiangong.cc/">建工驿站</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
+    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://adout.chinamap.org/">中山市优兔电子商务有限公司</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
 <!--统计开始--><center>
 	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279715225'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279715225%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 	 </center><!--统计结束-->
