--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a class="nav-link" href="https://mail.jiangong.cc/" target="_blant">企业邮箱</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./ip" target="_blant">IP查询</a>
+                    <a class="nav-link" href="https://hi.chinamap.org" target="_blant">云播放</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./love" target="_blant">纪念日</a>
@@ -445,7 +445,15 @@
     <!--版权信息开始-->
     <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://adout.chinamap.org/">中山市优兔电子商务有限公司</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
 <!--统计开始--><center>
+
+<div title="TrustAsia 安全签章" id="myssl_seal" onclick="window.open('https://myssl.com/seal/detail?domain=www.chinamap.org','TrustAsia 安全签章','height=800,width=470,top=0,right=0,toolbar=no,menubar=no,scrollbars=no,resizable=no,location=no,status=no')" style="text-align: center"><img src="https://sealres.trustasia.com/seal/img/1x/seal.png?domain=www.chinamap.org" alt="TrustAsia 安全签章" style="width: 130px;height: auto; cursor: pointer"></div>
+	
+
+
 	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279715225'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1279715225%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+	
+	
+	
 	 </center><!--统计结束-->
     <!--版权信息结束-->
     <script>
