--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     <a class="nav-link" href="./love" target="_blant">纪念日</a>
                 </li>
 				<li class="nav-item">
-				    <a class="nav-link" href="https://www.jiaohuile.com/s/g6in3y" target="_blant">手机浏览器</a>
+				    <a class="nav-link" href="https://pan.chinamap.org/s/g6in3y" target="_blant">手机浏览器</a>
 				</li>
 				<li class="nav-item">
-				    <a class="nav-link" href="https://www.jiaohuile.com/#/1/main/%E8%BB%9F%E4%BB%B6" target="_blant">软件下载</a>
+				    <a class="nav-link" href="https://pan.chinamap.org/#/1/main/%E8%BB%9F%E4%BB%B6" target="_blant">软件下载</a>
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link" href="http://bzdt.ch.mnr.gov.cn/" target="_blant">中国地图</a>
