--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a class="nav-link" href="https://mail.jiangong.cc/" target="_blant">企业邮箱</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://hi.chinamap.org" target="_blant">云播放</a>
+                    <a class="nav-link" href="https://hi.chinamap.org" target="_blant">华图视频</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./love" target="_blant">纪念日</a>
