--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>华图 - 愿祖国繁荣富强 - 中国地图</title>
+    <title>ChinaMap - 愿祖国繁荣富强</title>
 	<meta content="资讯,新闻,财经,房产,视频,NBA,科技,中国地图,ChinaMap,地图,中国" name="Keywords">
 	<meta name="description" content="愿祖国繁荣富强。" />
     <link rel="apple-touch-icon-precomposed" href="280.png" />
@@ -77,25 +77,22 @@
         <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://www.jiangong.cc" target="_blant">聚合搜索</a>
+                    <a class="nav-link" href="http://bzdt.ch.mnr.gov.cn/" target="_blant">中国地图</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://pan.chinamap.org" target="_blant">华图网盘</a>
+                    <a class="nav-link" href="https://pan.chinamap.org" target="_blant">网盘</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://mail.jiangong.cc/" target="_blant">企业邮箱</a>
+                    <a class="nav-link" href="https://exmail.qq.com/login" target="_blant">邮箱</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://hi.chinamap.org" target="_blant">华图视频</a>
+                    <a class="nav-link" href="https://hi.chinamap.org" target="_blant">视频</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./love" target="_blant">纪念日</a>
                 </li>
 				<li class="nav-item">
-				    <a class="nav-link" href="https://pan.chinamap.org/s/g6in3y" target="_blant">手机浏览器</a>
-				</li>
-				<li class="nav-item">
-				    <a class="nav-link" href="http://bzdt.ch.mnr.gov.cn/" target="_blant">中国地图</a>
+				    <a class="nav-link" href="http://blog.chinamap.org/" target="_blant">博客</a>
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link" href="http://adout.chinamap.org/" target="_blant">关于我们</a>
@@ -141,7 +138,7 @@
                 <div class="search-group group-a s-current" style="padding-left: 5px">
                     <ul class="search-type">
                         <li><input checked="" hidden="" type="radio" name="type" id="type-baidu" value="https://www.baidu.com/s?wd=" data-placeholder="百度一下"><label for="type-baidu"><span style="color:#2100E0">百度</span></label></li>
-                        <li><input hidden="" type="radio" name="type" id="type-google" value="https://www.alicloud.ink/search?hl=zh-CN&q=" data-placeholder="谷歌搜索"><label for="type-google"><span style="color:#3B83FA">G</span><span style="color:#F3442C">o</span><span style="color:#FFC300">o</span><span style="color:#4696F8">g</span><span style="color:#2CAB4E">l</span><span style="color:#F54231">e</span></label></li>
+                        <li><input hidden="" type="radio" name="type" id="type-google" value="https://www.Google.com/search?hl=zh-CN&q=" data-placeholder="谷歌搜索"><label for="type-google"><span style="color:#3B83FA">G</span><span style="color:#F3442C">o</span><span style="color:#FFC300">o</span><span style="color:#4696F8">g</span><span style="color:#2CAB4E">l</span><span style="color:#F54231">e</span></label></li>
                         <li><input hidden="" type="radio" name="type" id="type-duck" value="https://mobile.yangkeduo.com/search_result.html?search_key=" data-placeholder="拼多多搜索"><label for="type-duck"><span style="color:#b1870b">拼多多</span></label></li>
 						<li><input hidden="" type="radio" name="type" id="type-yingshi" value="https://hi.chinamap.org/so.php?wd=" data-placeholder="影视搜索"><label for="type-yingshi"><span style="color:#ff5722">影视</span></label></li>
 						<li><input hidden="" type="radio" name="type" id="type-Picclick" value="https://picclick.com/?q=" data-placeholder="Picclick"><label for="type-Picclick"><span style="color:#ff5722">Picclick</span></label></li>
@@ -213,7 +210,7 @@
                     </svg><span>哔哩哔哩</span></a></li>
 			<li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="http://emby2021.kozow.com:8096/web/index.html#!/home" target="_blank"><svg class="icon" aria-hidden="true">
 			            <use xlink:href="#icon-netflix"></use>
-			        </svg><span>Emby 账号：无损 密码：666</span></a></li>
+			        </svg><span>账号：无损 密码：666</span></a></li>
 		</ul>			
         <ul class="mylist row">
             <li class="title"><svg t="1613706725924" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2316" width="200" height="200"><path d="M678.775467 757.304889c-6.030222 48.5376-35.908267 87.472356-82.215823 106.951111a209.851733 209.851733 0 0 1-87.790933 14.859378 286.765511 286.765511 0 0 1-119.944533-30.537956 300.009244 300.009244 0 0 1-48.150756-32.5632c-3.800178-3.140267-4.3008-5.233778-1.706666-8.760889l9.443555-13.698844 10.057956-14.563556c2.594133-3.8912 6.781156-4.255289 10.922666-1.024l0.773689 0.568889 2.321067 1.774934 2.980978 2.275555c39.958756 30.833778 86.471111 48.5376 133.393066 50.289778 65.3312-0.841956 112.275911-29.764267 120.763734-74.114845 9.261511-48.901689-29.741511-91.067733-105.949867-114.642488-23.870578-7.327289-84.127289-31.084089-95.209244-37.523912-52.246756-30.128356-76.617956-69.563733-73.1136-118.328888 5.302044-67.584 69.0176-118.010311 149.617777-118.328889 36.590933 0.068267 72.795022 7.418311 106.496 21.617777 12.242489 5.028978 34.042311 16.770844 41.5744 22.300445 4.323556 3.117511 5.211022 6.7584 2.730667 10.763378-1.365333 2.275556-3.6864 5.916444-8.556089 13.425777v0.113778l-8.078222 12.583822c-2.525867 3.754667-5.461333 4.164267-10.080711 1.274312a225.826133 225.826133 0 0 0-122.88-37.569423c-56.1152 1.069511-98.144711 33.883022-100.920889 78.688711-0.750933 40.436622 30.082844 69.927822 96.574578 92.433067 135.031467 42.666667 186.709333 92.728889 176.9472 171.736178zM512 59.460267c87.881956 0 159.584711 82.1248 162.929778 184.9344H349.024711c3.322311-102.8096 74.979556-184.9344 162.975289-184.9344z m455.020089 204.299377a19.410489 19.410489 0 0 0-19.478756-19.364977h-211.262577C731.113244 108.657778 632.649956 0.386844 512 0.386844c-120.695467 0-219.158756 108.225422-224.324267 244.007823H76.094578a19.410489 19.410489 0 0 0-19.114667 20.866844H56.888889l30.128355 654.244978c0 1.820444 0.113778 3.640889 0.227556 5.575111l0.091022 1.206044 0.091022 1.365334 0.045512 0.113778c4.619378 45.511111 38.183822 82.215822 83.854222 83.876977l0.091022 0.113778H845.824c46.466844-1.274311 84.081778-38.479644 88.041244-84.559644h0.045512v-0.659911l0.159288-1.410845 0.136534-3.4816L967.111111 264.760889c-0.091022-0.341333-0.091022-0.659911-0.091022-1.001245z" fill="#EF4D2D" p-id="2317"></path></svg>
@@ -277,6 +274,10 @@
 			  <span>卖家精灵</span></a></li>
 			<li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://sellercentral.amazon.com/fba/revenuecalculator/index?lang=en_US" target="_blank"><svg t="1613918517437" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="7989" width="200" height="200"><path d="M512 512m-512 0a512 512 0 1 0 1024 0 512 512 0 1 0-1024 0Z" fill="#3973E6" p-id="7990"></path><path d="M512 768c-127.0784 0-230.4-78.5408-230.4-175.0528C281.6 527.36 332.8 432.9984 411.136 385.2288a66.56 66.56 0 0 1-18.5856-45.2608c0-47.0528 52.8896-83.968 120.32-83.968s120.32 36.864 120.32 83.9168a66.56 66.56 0 0 1-19.1488 45.824C691.8144 433.7664 742.4 527.36 742.4 592.9984c0 96.512-103.424 175.0528-230.4 175.0528z m0.768-479.8464c-47.7696 0-88.1664 23.6544-88.1664 51.712a45.0048 45.0048 0 0 0 23.6032 34.6624 16.128 16.128 0 0 1-1.8944 28.16C368.2304 439.3472 313.8048 532.48 313.8048 592.9984c0 78.7968 88.9344 142.8992 198.2976 142.8992s198.2976-64 198.2976-142.8992c0-60.2624-54.2208-153.088-131.8912-189.9008a16.128 16.128 0 0 1-1.7408-28.16 45.7728 45.7728 0 0 0 24.2176-34.9696c0-28.1088-40.3456-51.8144-88.1664-51.8144z" fill="#FFFFFF" p-id="7991"></path><path d="M488.7552 670.72v-37.376h-44.3904a13.2608 13.2608 0 1 1 0-26.4192h44.3904v-20.48h-44.3904a13.2608 13.2608 0 1 1 0-26.4192h25.1904l-38.4-53.9648a20.8896 20.8896 0 0 1-4.8128-13.2096 22.4256 22.4256 0 0 1 40.96-13.2096l44.3904 63.5904 44.4416-63.5904a23.8592 23.8592 0 0 1 17.9712-9.6256 23.6032 23.6032 0 0 1 22.784 22.8352 20.8384 20.8384 0 0 1-4.7616 13.2096l-38.4 53.9648H578.56a13.2608 13.2608 0 1 1 0 26.4192h-44.3904v20.48H578.56a13.2608 13.2608 0 1 1 0 26.4192h-44.3904v37.376c-0.8192 13.568-8.3968 20.48-22.8352 20.48s-21.8112-7.0656-22.5792-20.48z" fill="#FFFFFF" p-id="7992"></path></svg>
 			  <span>收益计算器</span></a></li>
+			<li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.17track.net/zh-cn" target="_blank"><svg t="1616156611208" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2306" width="200" height="200"><path d="M832 640H448V192h320v-64H384v128H128L0 448v256h147.2c-12.8 19.2-19.2 38.4-19.2 64 0 70.4 57.6 128 128 128s128-57.6 128-128c0-25.6-6.4-44.8-19.2-64h230.4c-12.8 19.2-19.2 38.4-19.2 64 0 70.4 57.6 128 128 128s128-57.6 128-128c0-25.6-6.4-44.8-19.2-64H960v-64H832zM256 832c-38.4 0-64-25.6-64-64s25.6-64 64-64 64 25.6 64 64-25.6 64-64 64z m128-192H64V467.2L160 320h224v320z m320 192c-38.4 0-64-25.6-64-64s25.6-64 64-64 64 25.6 64 64-25.6 64-64 64z" p-id="2307" fill="#1296db"></path><path d="M576 320h256v64H576z m128 128h256v64H704z m-576 0v128h192v-64H192v-64z" p-id="2308" fill="#1296db"></path></svg>
+			  <span>物流查询</span></a></li>
+			<li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://parcelsapp.com/en/tracking/" target="_blank"><svg t="1616156794039" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2476" width="200" height="200"><path d="M496.872727 661.643636a46.545455 46.545455 0 0 1-46.545454-46.545454v-325.818182h-132.421818a46.545455 46.545455 0 0 0-42.589091 28.16l-81.454546 189.207273a25.6 25.6 0 0 1-23.272727 15.127272H102.167273a23.272727 23.272727 0 0 0-19.549091 9.774546L20.712727 639.767273a23.272727 23.272727 0 0 0-4.189091 8.843636 19.549091 19.549091 0 0 0 0 6.283636v95.185455a25.134545 25.134545 0 0 0 24.901819 25.367273h101.003636a25.6 25.6 0 0 1 23.272727 20.247272 73.541818 73.541818 0 0 0 142.894546 0 25.832727 25.832727 0 0 1 23.272727-20.247272h352.814545a25.134545 25.134545 0 0 1 23.272728 19.781818 74.705455 74.705455 0 0 0 71.68 56.32 63.767273 63.767273 0 0 0 11.636363 0 74.705455 74.705455 0 0 0 59.810909-54.923636 25.832727 25.832727 0 0 1 23.272728-20.247273l85.410909 1.629091a46.545455 46.545455 0 0 0 46.545454-46.545455v-69.818182h-512z" fill="#73B4FF" p-id="2477"></path><path d="M962.327273 172.916364h-465.454546a46.545455 46.545455 0 0 0-46.545454 46.545454v69.818182h139.636363a46.545455 46.545455 0 0 1 46.545455 46.545455v325.818181h372.363636v-442.181818a46.545455 46.545455 0 0 0-46.545454-46.545454z" fill="#87D3FF" p-id="2478"></path><path d="M496.872727 661.643636h139.636364v-325.818181a46.545455 46.545455 0 0 0-46.545455-46.545455h-139.636363v325.818182a46.545455 46.545455 0 0 0 46.545454 46.545454z" fill="#73B4FF" p-id="2479"></path><path d="M496.872727 661.643636h139.636364v-325.818181a46.545455 46.545455 0 0 0-46.545455-46.545455h-139.636363v325.818182a46.545455 46.545455 0 0 0 46.545454 46.545454z" fill="#1474E4" p-id="2480"></path></svg>
+			  <span>包裹追踪</span></a></li>
         </ul>
         <ul class="mylist row">
             <li class="title"><svg class="icon" aria-hidden="true">
@@ -440,7 +441,7 @@
         </ul>
     </div>
     <!--版权信息开始-->
-    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://adout.chinamap.org/">中山市优兔电子商务有限公司</a> | <a href="http://beian.miit.gov.cn">赣ICP备2021001348号</a></p>
+    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://adout.chinamap.org/">中山市优兔电子商务有限公司</a></p>
 <!--统计开始--><center>
 
 <div title="TrustAsia 安全签章" id="myssl_seal" onclick="window.open('https://myssl.com/seal/detail?domain=www.chinamap.org','TrustAsia 安全签章','height=800,width=470,top=0,right=0,toolbar=no,menubar=no,scrollbars=no,resizable=no,location=no,status=no')" style="text-align: center"><img src="https://sealres.trustasia.com/seal/img/1x/seal.png?domain=www.chinamap.org" alt="TrustAsia 安全签章" style="width: 130px;height: auto; cursor: pointer"></div>
