--- a/index.html
+++ b/index.html
@@ -91,12 +91,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./love" target="_blant">纪念日</a>
                 </li>
-				<li class="nav-item">
-				    <a class="nav-link" href="http://blog.chinamap.org/" target="_blant">博客</a>
-				</li>
-				<li class="nav-item">
-				    <a class="nav-link" href="http://adout.chinamap.org/" target="_blant">关于我们</a>
-				</li>
 				
             </ul>
             <style>
@@ -444,7 +438,7 @@
         </ul>
     </div>
     <!--版权信息开始-->
-    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://adout.chinamap.org/">中山市优兔电子商务有限公司</a></p>
+    <p class="mt-5 mb-3 text-muted text-center">© 2018-2021 <a href="https://chinamap.org/">ChinaMap.org</a></p>
 <!--统计开始--><center>
 
 <div title="TrustAsia 安全签章" id="myssl_seal" onclick="window.open('https://myssl.com/seal/detail?domain=www.chinamap.org','TrustAsia 安全签章','height=800,width=470,top=0,right=0,toolbar=no,menubar=no,scrollbars=no,resizable=no,location=no,status=no')" style="text-align: center"><img src="https://sealres.trustasia.com/seal/img/1x/seal.png?domain=www.chinamap.org" alt="TrustAsia 安全签章" style="width: 130px;height: auto; cursor: pointer"></div>
